--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mongodb+srv://admin:root@yamaha-cluster.16udhhp.mongodb.net/yamaha-db?retryWrites=true&w=majority&appName=yamaha-cluster"
+
+AUTH_SECRET=MHlll6+Hu+929cI3P0sCsTlCSPQ5QAb0qVMO0T3MpoQ=
