--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
+    "@clerk/nextjs": "^5.1.6",
     "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -21,7 +22,6 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.397.0",
     "next": "14.2.4",
-    "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "prisma": "^5.16.1",
     "react": "^18",
